--- a/Html5-Dom 3/Task3/index.html
+++ b/Html5-Dom 3/Task3/index.html
@@ -8,15 +8,45 @@
 <body>
     <section id="mainwrapper">
         <section id="controlswrapper">
-
+            <div class="cards-group">
+                <button class="card">
+                    Video 1
+                </button>
+                <button class="card">
+                    Video 2
+                </button>
+                <button class="card">
+                    Video 3
+                </button>
+                <button class="card">
+                    Video 4
+                </button>
+                <button class="card">
+                    Video 5
+                </button>
+                <button class="card">
+                    Video 6
+                </button>
+                <button class="card">
+                    Video 7
+                </button>
+                <button class="card">
+                    Video 8
+                </button>
+                <button class="card">
+                    Video 9
+                </button>
+            </div>
         </section>
         <section id="videowrapper">
-            <div id="myvideo">    
-                <video controls="fasle" autoplay width="500px">
+            <div>
+                <video autoplay id="myvideo">
                     <source src="vid.webm" />
                 </video>
             </div>
         </section>
     </section>
+
+    <script src="main.js"></script>
 </body>
 </html>
